crates/knot-core/src/snapshots/knot_core__backend__tests__format_chunk_dataframe_and_plot.snap
---
source: crates/knot-core/src/backend.rs
expression: "backend.format_chunk(&chunk, &chunk.codly_options, &resolved, &output_data,\n&ChunkExecutionState::Ready)"
---
#code-chunk(lang: "r", code: none, output: [#{ let data = csv("/tmp/data.csv"); table(columns: data.first().len(), ..data.flatten()) }
#image("/tmp/plot.svg")])
