crates/knot-core/src/snapshots/knot_core__backend__tests__format_chunk_empty_name_no_figure_wrapper.snap
---
source: crates/knot-core/src/backend.rs
expression: "backend.format_chunk(&chunk, &chunk.codly_options, &resolved, &output_data,\n&ChunkExecutionState::Ready)"
---
#code-chunk(lang: "r", code: [```r
1 + 1
```], output: [```output
[1] 2
```], layout: "horizontal")
