crates/knot-core/src/snapshots/knot_core__backend__tests__format_chunk_no_output.snap
---
source: crates/knot-core/src/backend.rs
expression: "backend.format_chunk(&chunk, &chunk.codly_options, &resolved, &output_data,\n&ChunkExecutionState::Ready)"
---
#code-chunk(lang: "r", code: [```r
x <- 1
```], output: none, layout: "horizontal")
