crates/knot-core/src/snapshots/knot_core__backend__tests__format_chunk_plot_output.snap
---
source: crates/knot-core/src/backend.rs
expression: "backend.format_chunk(&chunk, &chunk.codly_options, &resolved, &output_data,\n&ChunkExecutionState::Ready)"
---
#code-chunk(lang: "r", code: none, output: [#image("/tmp/plot.svg")])
