crates/knot-core/src/snapshots/knot_core__backend__tests__format_chunk_text_output_with_code.snap
---
source: crates/knot-core/src/backend.rs
expression: "backend.format_chunk(&chunk, &chunk.codly_options, &resolved, &output_data,\n&ChunkExecutionState::Ready)"
---
#code-chunk(lang: "r", code: [```r
x <- 1:10
mean(x)
```], output: [```output
[1] 5.5
```], layout: "horizontal")
