crates/knot-core/src/snapshots/knot_core__backend__tests__format_chunk_with_codly_options.snap
---
source: crates/knot-core/src/backend.rs
expression: "backend.format_chunk(&chunk, &chunk.codly_options, &resolved, &output_data,\n&ChunkExecutionState::Ready)"
---
#code-chunk(lang: "r", code: [#local(lang-radius: 10pt, stroke: 1pt + rgb("#CE412B"))[```r
x <- 1:10
```]], output: [```output
[1] 1  2  3  4  5  6  7  8  9 10
```], layout: "horizontal")
