crates/knot-core/src/snapshots/knot_core__backend__tests__format_chunk_with_errors.snap
---
source: crates/knot-core/src/backend.rs
expression: "backend.format_chunk(&chunk, &chunk.codly_options, &resolved, &output_data,\n&ChunkExecutionState::Ready)"
---
#code-chunk(lang: "r", errors: ([#"Unknown option: 'foo'"], [#"Invalid value for 'eval'"]), code: [```r
1 + 1
```], output: [```output
[1] 2
```], layout: "horizontal")
